syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.tozastation.clasickcoreapi.grpc";
option java_outer_classname = "UserProto";

package user;

service UserRpc {
    rpc SignIn (RequestSignIn) returns (ResponseSignIn) {};
    rpc SignUp (RequestSignUp) returns (ResponseSignUp) {};
    rpc GetSingleUser (RequestGetSingleUser) returns (ResponseGetSingleUser) {
    };
}

// Result: レスポンスの結果
enum Result {
    SUCCESS = 0;
    FAILED = 1;
}

message RequestSignIn {
    string user_name = 1;
    string password = 2;
}

message ResponseSignIn {
    string access_token = 1;
    Result result = 2;
}

message RequestSignUp {
    string user_name = 1;
    string password = 2;
    Result result = 3;
}

message ResponseSignUp {
    string access_token = 1;
    Result result = 2;
}

message ResponseUser {
    int32 user_id = 1;
    string user_name = 2;
}
message RequestGetSingleUser {
    int32 user_id = 1;
}

message ResponseGetSingleUser {
    ResponseUser user = 1;
    Result result = 2;
}